--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ install:
   - cd $WD
 
 before_script:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then rm -f '/usr/local/include/c++'; brew install r libxml2 freetype; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then export HOMEBREW_NO_AUTO_UPDATE=1; rm -f '/usr/local/include/c++'; brew install r libxml2; fi
+  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E084DAB9; fi
   - if [[ "$TRAVIS_DIST_NAME" == "trusty" ]]; then echo "deb https://cloud.r-project.org/bin/linux/ubuntu trusty-cran35/" | sudo tee -a /etc/apt/sources.list; fi
-  - if [[ "$TRAVIS_DIST_NAME" == "xenial" ]]; then echo "deb https://cloud.r-project.org/bin/linux/ubuntu xenial/" | sudo tee -a /etc/apt/sources.list; fi
-  - if [[ "$TRAVIS_DIST_NAME" == "trusty" ]]; then sudo add-apt-repository -s -y ppa:marutter/c2d4u; fi
+  #- if [[ "$TRAVIS_DIST_NAME" == "xenial" ]]; then echo "deb https://cloud.r-project.org/bin/linux/ubuntu xenial/" | sudo tee -a /etc/apt/sources.list; fi
+  #- if [[ "$TRAVIS_DIST_NAME" == "trusty" ]]; then sudo add-apt-repository -s -y ppa:marutter/c2d4u; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install r-recommended pandoc --allow-unauthenticated -y; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install pandoc; fi
