--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ install:
   - cd $WD
 
 before_script:
-  - > if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then 
+  - > 
+      if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then 
       export HOMEBREW_NO_AUTO_UPDATE=1; 
       rm -f '/usr/local/include/c++'; 
       brew install r libxml2; 
@@ -31,7 +32,8 @@ before_script:
       brew install pandoc;
       brew install ant;
       fi
-  - > if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
+  - > 
+      if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then 
       echo "deb https://cloud.r-project.org/bin/linux/ubuntu xenial-cran35/" | sudo tee -a /etc/apt/sources.list;
       sudo apt-get update -qq;
       sudo apt-get install libglu1-mesa-dev libfreetype6-dev libmagick++-dev;
